--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -19,13 +19,16 @@ modules:
     repos:
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
+      - emacs
+      - ffmpeg
+      - syncthing
       # - micro
       # - starship
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
-      # - firefox
-      # - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
+      - firefox
+      - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
@@ -36,7 +39,17 @@ modules:
       # repo-title: "Flathub (system-wide)" # Optional; this sets the remote's user-facing name in graphical frontends like GNOME Software
       install:
         - io.gitlab.librewolf-community
-        - org.mozilla.firefox
+        - org.keepassxc.KeePassXC
+        - org.signal.Signal
+        - org.asamk.SignalCli # use Signal in terminal
+        - io.github.ungoogled_software.ungoogled_chromium
+        - com.calibre_ebook.calibre
+        - org.torproject.torbrowser-launcher
+        - com.protonvpn.www
+        - ch.protonmail.protonmail-bridge
+        - org.videolan.VLC
+        - com.github.jeromerobert.pdfarranger
+        # - org.mozilla.firefox
         # - org.gnome.Loupe
         # - one.ablaze.floorp//lightning # This is an example of flatpak which has multiple branches in selection (flatpak//branch).
       # Flatpak runtimes are not supported (like org.winehq.Wine//stable-23.08),
