--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -58,6 +58,7 @@ modules:
         - org.gnome.Loupe
         - org.gnome.Evince
         - org.mozilla.Thunderbird
+        - org.fedoraproject.MediaWriter
         # - one.ablaze.floorp//lightning # This is an example of flatpak which has multiple branches in selection (flatpak//branch).
       # Flatpak runtimes are not supported (like org.winehq.Wine//stable-23.08),
       # only normal flatpak applications are (like Floorp Lightning web browser in this example).
