Shell notify-send

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -48,7 +48,7 @@ modules:
         - run: brew install ffmpeg
         - run: brew install pandoc
       post:
-        - run: Notify-send "Homebrew setup successful"
+        - run: notify-send "Homebrew setup successful"
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
