Move mpv from flatpak to brew

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -37,6 +37,7 @@ modules:
     brew-analytics: false # disable telemetry
     # install:
       # - ffmpeg
+      # - mpv
       # - pandoc
 
   - type: default-flatpaks
@@ -66,7 +67,6 @@ modules:
         - org.gnome.Evince
         - org.mozilla.Thunderbird
         - org.fedoraproject.MediaWriter
-        - io.mpv.Mpv
         # - one.ablaze.floorp//lightning # This is an example of flatpak which has multiple branches in selection (flatpak//branch).
       # Flatpak runtimes are not supported (like org.winehq.Wine//stable-23.08),
       # only normal flatpak applications are (like Floorp Lightning web browser in this example).
