--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -20,6 +20,7 @@ modules:
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
       - emacs
+      - keepassxc
       - syncthing
       - gnome-boxes
       # - micro
