Add chezmoi module

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -35,4 +35,8 @@ modules:
     nofile-limits: true # increase nofile limits
     brew-analytics: false # disable telemetry
 
+  - type: chezmoi
+    repository: "https://github.com/sgbonney/dotfiles.git" # my dotfiles repo
+    file-conflict-policy: replace # override changed files with those from the repo
+
   - type: signing # this sets up the proper policy & signing files for signed images to work fully
