Add gopass to rpm-ostree

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -21,6 +21,7 @@ modules:
       - keepassxc
       - syncthing
       - gnome-boxes
+      - gopass
       # - micro
       # - starship
     remove:
