Change rpm-ostree enchant to enchant2-devel

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -20,7 +20,7 @@ modules:
       - emacs
       - keepassxc
       - syncthing
-      - enchant
+      - enchant2-devel
       # - micro
       # - starship
     remove:
