--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -21,6 +21,7 @@ modules:
       - keepassxc
       - syncthing
       - enchant2-devel
+      - backintime-qt
       # - micro
       # - starship
     remove:
