Add default-flatpaks module

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -26,6 +26,11 @@ modules:
       - firefox
       - firefox-langpacks
 
+  - type: default-flatpaks
+    system:
+      repo-url: https://dl.flathub.org/repo/flathub.flatpakrepo
+      repo-name: flathub
+
   - type: brew
     nofile-limits: true
     brew-analytics: false
