Remove gnome-keyring rpm-ostree

--- a/recipes/recipe.yml
+++ b/recipes/recipe.yml
@@ -24,6 +24,7 @@ modules:
       - backintime-qt
       - gnome-disk-utility
     remove:
+      - gnome-keyring
       - firefox
       - firefox-langpacks
 
